# vaultlocker

./: .coveragerc  .gitreview  .stestr.conf  .travis.yml  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini  vaultlocker@.service
.github/workflows/: testing.yml
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
etc/: vaultlocker.conf
gate/: travis-vault.sh
releasenotes/source/: conf.py  index.rst
tools/: vaultlocker-decrypt@.service
vaultlocker/: __init__.py  dmcrypt.py  exceptions.py  main.py  shell.py  systemd.py  vault_exceptions.py
vaultlocker/tests/: test_dmcrypt.py  test_systemd.py  test_vaultlocker.py
vaultlocker/tests/functional/: base.py  test_keystorage.py
vaultlocker/tests/unit/: test_dmcrypt.py  test_systemd.py  test_vaultlocker.py
