[metadata]
name = vaultlocker
summary = Utility to store and retrieve dm-crypt encryption keys in Hashicorp Vault
description-file =
    README.rst
author = OpenStack Charms Team
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    vaultlocker
data_files =
    lib/systemd/system =
    tools/vaultlocker-decrypt@.service
    etc/vaultlocker =
    etc/vaultlocker.conf

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = vaultlocker/locale
domain = vaultlocker

[update_catalog]
domain = vaultlocker
output_dir = vaultlocker/locale
input_file = vaultlocker/locale/vaultlocker.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = vaultlocker/locale/vaultlocker.pot

[entry_points]
console_scripts =
    vaultlocker = vaultlocker.shell:main
